objects/Model_Indicator_Definitions__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indicator_Weight__c</fullName>
        <label>Indicator Weight</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Sub_Category_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model Sub Category Definition</label>
        <referenceTo>Model_Sub_Category_Definition__c</referenceTo>
        <relationshipLabel>Model Indicator Definitions</relationshipLabel>
        <relationshipName>Model_Score_Labels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score_Guidance_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score Guidance High</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Guidance_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score Guidance Low</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Guidance_Mid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score Guidance Mid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Guidance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score Guidance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Score_Labels__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score Labels</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>&apos;V 1.0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Version</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Model Indicator Definition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Model Indicator Definition  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Model Indicator Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>